# PSVita-StorageMgr

./: .travis.yml  CMakeLists.txt  README.md  build.sh  debug_screen.c  debug_screen.h  debug_screen_font.c  main.c  storage_config.txt
kernel/: CMakeLists.txt  exports.yml  main.c
sce_sys/livearea/contents/: template.xml
scripts/travis/: build.sh  setup.sh
